# link-net

./: justfile  main.py  pyproject.toml  readme.md  tasks.py
src/: config.json  linknetgen.py  main.py
src/site/: index.html
src/static/styles/: style.css
tests/: tests_linknetgen.py
